crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__slot__slot_with_fallback.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<slot>fallback content</slot>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div>`)
  _ssrRenderSlot(_ctx.$slots, "default", {}, () => {
    _push(`fallback content`)
  }, _push, _parent)
  _push(`</div>`)
}
